--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,17 +3,17 @@
 <div class="container">
     <header class="jumbotron">
         <div class="container">
-            <h1>Welcome To YelpCamp</h1>
-            <p>View our hand-picked campgrounds from around the world!</p>
+            <h1>3204 Tanglewood Trail</h1>
+            <p>View our photos of the home and the surounding area!</p>
             <p>
-                <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Campground</a>  
+                <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Photo</a>  
             </p>
         </div>
     </header>
 
 <div class="row">
     <div class="col-lg-12">
-        <h3>Our Most Popular Campgrounds</h3>
+        <h3>Our Most Popular Photos</h3>
     </div>
 </div>
 
