--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,7 @@
 r<!DOCTYPE html>
 <html>
     <head>
-        <title>YelpCamp</title>
+        <title>Tanglewood</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
@@ -22,8 +22,8 @@ r<!DOCTYPE html>
     </div>
     
     <div id="landing-header">
- 		<h1>Welcome to YelpCamp!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-success">View All Campgrounds</a>
+ 		<h1>Welcome to Tanglewood!</h1>
+		<a href="/campgrounds" class="btn btn-lg btn-success">View All Photos</a>
     </div>
     
     <ul class="slideshow">
