--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,8 +3,8 @@
 <div class="container">
     <header class="jumbotron">
         <div class="container">
-            <h1>3204 Tanglewood Trail</h1>
-            <p>View our photos of the home and the surounding area!</p>
+            <h1>Welcome to YelpCamp</h1>
+            <p>View our hand-picked campgrounds from around the world!</p>
             <p>
                 <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Photo</a>  
             </p>
